[package]
name = "FerruZ"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
dialoguer = "0.10"
indicatif = "0.17"
console = "0.15"
which = "4.4"